# PDF-Studio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PDFStudio.spec  PDFStudio_Installer.iss  README.md  ZeusPDF.spec  ZeusPDF_Installer.iss  _pytest_pre_import.py  build.sh  build_windows.bat  main.py  make_logo.py  pyproject.toml  requirements-signing.txt  requirements.txt  setup.py
.github/workflows/: build.yml  test.yml
assets/: zeuspdf.icns
pdfstudio/: __init__.py  __version__.py
pdfstudio/commands/: annotation_commands.py  base.py  field_commands.py
pdfstudio/engine/: annotations.py  document.py  fields.py  renderer.py  signer.py
pdfstudio/models/: document_model.py
pdfstudio/utils/: theme.py
pdfstudio/views/: canvas.py  convert_dialog.py  main_window.py  overlay_items.py  print_dialog.py  properties.py  sidebar.py  signature_dialog.py  tab_order_dialog.py  text_select.py  toolbar.py
tests/: conftest.py
tests/integration/: test_main_window.py
tests/unit/: test_annotations.py  test_document.py  test_document_model.py  test_fields.py  test_renderer.py  test_signer.py  test_undo_stack.py
